Avoid inconsistent NA location in contributors

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -320,18 +320,6 @@
        "      <td>2018</td>\n",
        "      <td>en</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>7</td>\n",
-       "      <td>https://pure.amc.nl/en/publications/under-pres...</td>\n",
-       "      <td>Cardiology</td>\n",
-       "      <td>3</td>\n",
-       "      <td>amcpub</td>\n",
-       "      <td>van Riel, Annelieke C. M. J.</td>\n",
-       "      <td>Under pressure: Pulmonary arterial hypertensio...</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>en</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -357,7 +345,6 @@
        "70           6  https://pure.amc.nl/en/publications/epidemiolo...   \n",
        "88           7  https://pure.amc.nl/en/publications/under-pres...   \n",
        "90           7  https://pure.amc.nl/en/publications/under-pres...   \n",
-       "92           7  https://pure.amc.nl/en/publications/under-pres...   \n",
        "\n",
        "                      contributor  contributor_order institution  \\\n",
        "0     van Noorden, Cornelis J. F.                  1      amcpub   \n",
@@ -379,7 +366,6 @@
        "70                    Reitsma, S.                  2      amcpub   \n",
        "88          Mulder, Barbara J. M.                  1      amcpub   \n",
        "90                Bouma, Berto J.                  2      amcpub   \n",
-       "92                     Cardiology                  3      amcpub   \n",
        "\n",
        "                     author_name  \\\n",
        "0             Azaripour, Adriano   \n",
@@ -401,7 +387,6 @@
        "70                Hoffmans, Ruth   \n",
        "88  van Riel, Annelieke C. M. J.   \n",
        "90  van Riel, Annelieke C. M. J.   \n",
-       "92  van Riel, Annelieke C. M. J.   \n",
        "\n",
        "                                                title  year language  \n",
        "0   Structure and function of the human periodonti...  2016       en  \n",
@@ -422,11 +407,10 @@
        "68      Epidemiology and management of rhinosinusitis  2018       en  \n",
        "70      Epidemiology and management of rhinosinusitis  2018       en  \n",
        "88  Under pressure: Pulmonary arterial hypertensio...  2018       en  \n",
-       "90  Under pressure: Pulmonary arterial hypertensio...  2018       en  \n",
-       "92  Under pressure: Pulmonary arterial hypertensio...  2018       en  "
+       "90  Under pressure: Pulmonary arterial hypertensio...  2018       en  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,13 +420,12 @@
     "pairs_filtered = pairs_raw.drop_duplicates() \n",
     "# remove contributors that aren't people\n",
     "csv_path = \"data/removed_contributors.csv\"\n",
-    "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)\n",
-    "pairs_filtered"
+    "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +465,7 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>https://pure.amc.nl/en/publications/structure-...</td>\n",
-       "      <td>van Noorden, C.J.F.</td>\n",
+       "      <td>van Noorden, C.</td>\n",
        "      <td>1</td>\n",
        "      <td>amcpub</td>\n",
        "      <td>Azaripour, Adriano</td>\n",
@@ -506,7 +489,7 @@
        "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>https://pure.amc.nl/en/publications/neurocogni...</td>\n",
-       "      <td>Buitelaar, J.K.</td>\n",
+       "      <td>Buitelaar, J.</td>\n",
        "      <td>1</td>\n",
        "      <td>amcpub</td>\n",
        "      <td>Thissen, Andrieke J. A. M.</td>\n",
@@ -530,7 +513,7 @@
        "      <th>6</th>\n",
        "      <td>2</td>\n",
        "      <td>https://pure.amc.nl/en/publications/neurocogni...</td>\n",
-       "      <td>Lambregts-Rommelse, N.N.J.</td>\n",
+       "      <td>Lambregts-Rommelse, N.</td>\n",
        "      <td>4</td>\n",
        "      <td>amcpub</td>\n",
        "      <td>Thissen, Andrieke J. A. M.</td>\n",
@@ -550,12 +533,12 @@
        "5           2  https://pure.amc.nl/en/publications/neurocogni...   \n",
        "6           2  https://pure.amc.nl/en/publications/neurocogni...   \n",
        "\n",
-       "                  contributor  contributor_order institution  \\\n",
-       "0         van Noorden, C.J.F.                  1      amcpub   \n",
-       "1           Willershausen, B.                  2      amcpub   \n",
-       "3             Buitelaar, J.K.                  1      amcpub   \n",
-       "5                  Franke, B.                  3      amcpub   \n",
-       "6  Lambregts-Rommelse, N.N.J.                  4      amcpub   \n",
+       "              contributor  contributor_order institution  \\\n",
+       "0         van Noorden, C.                  1      amcpub   \n",
+       "1       Willershausen, B.                  2      amcpub   \n",
+       "3           Buitelaar, J.                  1      amcpub   \n",
+       "5              Franke, B.                  3      amcpub   \n",
+       "6  Lambregts-Rommelse, N.                  4      amcpub   \n",
        "\n",
        "                  author_name  \\\n",
        "0          Azaripour, Adriano   \n",
@@ -572,7 +555,7 @@
        "6  Neurocognitive and genetic factors in ADHD acr...  2014       en  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,14 +571,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>integer_id</th>\n",
+       "      <th>thesis_identifier</th>\n",
+       "      <th>institution</th>\n",
+       "      <th>author_name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>year</th>\n",
+       "      <th>language</th>\n",
+       "      <th>contributor</th>\n",
+       "      <th>contributor_order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>https://pure.amc.nl/en/publications/structure-...</td>\n",
+       "      <td>amcpub</td>\n",
+       "      <td>Azaripour, Adriano</td>\n",
+       "      <td>Structure and function of the human periodonti...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[van Noorden, C.J.F., Willershausen, B.]</td>\n",
+       "      <td>[1, 2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>https://pure.amc.nl/en/publications/neurocogni...</td>\n",
+       "      <td>amcpub</td>\n",
+       "      <td>Thissen, Andrieke J. A. M.</td>\n",
+       "      <td>Neurocognitive and genetic factors in ADHD acr...</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[Buitelaar, J.K., Franke, B., Lambregts-Rommel...</td>\n",
+       "      <td>[1, 3, 4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>https://pure.amc.nl/en/publications/quality-of...</td>\n",
+       "      <td>amcpub</td>\n",
+       "      <td>van Huis, Maike</td>\n",
+       "      <td>Quality of care and monitoring in paediatric e...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[van Goudoever, H.B., Groothoff, J.W., van der...</td>\n",
+       "      <td>[1, 2, 3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>https://pure.amc.nl/en/publications/optimizing...</td>\n",
+       "      <td>amcpub</td>\n",
+       "      <td>Creemers, Huub</td>\n",
+       "      <td>Optimizing quality of care for patients with A...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[van den Berg, L.H., Beelen, A.A.J.M., Veldink...</td>\n",
+       "      <td>[2, 3, 4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>https://pure.amc.nl/en/publications/bridging-t...</td>\n",
+       "      <td>amcpub</td>\n",
+       "      <td>Verlaan, Tessa</td>\n",
+       "      <td>Bridging the gap between gastrointestinal endo...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[Fockens, P., Bemelman, W.A., van Hooft, J.E.,...</td>\n",
+       "      <td>[1, 2, 3, 4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>https://pure.amc.nl/en/publications/epidemiolo...</td>\n",
+       "      <td>amcpub</td>\n",
+       "      <td>Hoffmans, Ruth</td>\n",
+       "      <td>Epidemiology and management of rhinosinusitis</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[Fokkens, W.J., Reitsma, S.]</td>\n",
+       "      <td>[1, 2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>https://pure.amc.nl/en/publications/under-pres...</td>\n",
+       "      <td>amcpub</td>\n",
+       "      <td>van Riel, Annelieke C. M. J.</td>\n",
+       "      <td>Under pressure: Pulmonary arterial hypertensio...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[Mulder, B.J.M., Bouma, B.J.]</td>\n",
+       "      <td>[1, 2]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   integer_id                                  thesis_identifier institution  \\\n",
+       "0           1  https://pure.amc.nl/en/publications/structure-...      amcpub   \n",
+       "1           2  https://pure.amc.nl/en/publications/neurocogni...      amcpub   \n",
+       "2           3  https://pure.amc.nl/en/publications/quality-of...      amcpub   \n",
+       "3           4  https://pure.amc.nl/en/publications/optimizing...      amcpub   \n",
+       "4           5  https://pure.amc.nl/en/publications/bridging-t...      amcpub   \n",
+       "5           6  https://pure.amc.nl/en/publications/epidemiolo...      amcpub   \n",
+       "6           7  https://pure.amc.nl/en/publications/under-pres...      amcpub   \n",
+       "\n",
+       "                    author_name  \\\n",
+       "0            Azaripour, Adriano   \n",
+       "1    Thissen, Andrieke J. A. M.   \n",
+       "2               van Huis, Maike   \n",
+       "3                Creemers, Huub   \n",
+       "4                Verlaan, Tessa   \n",
+       "5                Hoffmans, Ruth   \n",
+       "6  van Riel, Annelieke C. M. J.   \n",
+       "\n",
+       "                                               title  year language  \\\n",
+       "0  Structure and function of the human periodonti...  2016       en   \n",
+       "1  Neurocognitive and genetic factors in ADHD acr...  2014       en   \n",
+       "2  Quality of care and monitoring in paediatric e...  2016       en   \n",
+       "3  Optimizing quality of care for patients with A...  2016       en   \n",
+       "4  Bridging the gap between gastrointestinal endo...  2016       en   \n",
+       "5      Epidemiology and management of rhinosinusitis  2018       en   \n",
+       "6  Under pressure: Pulmonary arterial hypertensio...  2018       en   \n",
+       "\n",
+       "                                         contributor contributor_order  \n",
+       "0           [van Noorden, C.J.F., Willershausen, B.]            [1, 2]  \n",
+       "1  [Buitelaar, J.K., Franke, B., Lambregts-Rommel...         [1, 3, 4]  \n",
+       "2  [van Goudoever, H.B., Groothoff, J.W., van der...         [1, 2, 3]  \n",
+       "3  [van den Berg, L.H., Beelen, A.A.J.M., Veldink...         [2, 3, 4]  \n",
+       "4  [Fockens, P., Bemelman, W.A., van Hooft, J.E.,...      [1, 2, 3, 4]  \n",
+       "5                       [Fokkens, W.J., Reitsma, S.]            [1, 2]  \n",
+       "6                      [Mulder, B.J.M., Bouma, B.J.]            [1, 2]  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by publication and aggregate contributors into a list\n",
+    "aggregated = pairs_std.groupby([\n",
+    "        'integer_id', \n",
+    "        'thesis_identifier', \n",
+    "        'institution', \n",
+    "        'author_name', \n",
+    "        'title', \n",
+    "        'year', \n",
+    "        'language'\n",
+    "    ]) \\\n",
+    "    .agg(list) \\\n",
+    "    .reset_index()\n",
+    "    \n",
+    "# make sure the contributor is a sequence from 1 to n_contributors\n",
+    "aggregated['contributor_order'] = aggregated['contributor_order'].apply(lambda lst: list(range(1, len(lst) + 1)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group by publication and aggregate contributors into a list\n",
-    "aggregated = pairs_std.groupby(['integer_id', 'thesis_identifier', 'institution', 'author_name', 'title', 'year', 'language']) \\\n",
-    "                  .agg(list) \\\n",
-    "                  .reset_index()\n",
     "\n",
     "# Initialize a list to hold publication data dictionaries\n",
     "pubs_list = []\n",
@@ -626,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +941,7 @@
        "4  van Berge Henegouwen, M.I.  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +1086,7 @@
        "      <td>en</td>\n",
        "      <td>Mulder, B.J.M.</td>\n",
        "      <td>Bouma, B.J.</td>\n",
-       "      <td>, C.</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -962,7 +1128,7 @@
        "3                 <NA>   Beelen, A.A.J.M.               Veldink, J.H.   \n",
        "4          Fockens, P.     Bemelman, W.A.             van Hooft, J.E.   \n",
        "5        Fokkens, W.J.        Reitsma, S.                        <NA>   \n",
-       "6       Mulder, B.J.M.        Bouma, B.J.                        , C.   \n",
+       "6       Mulder, B.J.M.        Bouma, B.J.                        <NA>   \n",
        "\n",
        "                contributor_4  \n",
        "0                        <NA>  \n",
@@ -974,7 +1140,7 @@
        "6                        <NA>  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
