Sample file and export sample of cleaned dataset

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -9,10 +9,12 @@
     "# Import dependencies\n",
     "import pandas as pd\n",
     "import spacy # nlp library to filer out names that are not people\n",
+    "import sys\n",
     "\n",
     "# custom functions\n",
     "from src.clean_names_helpers import remove_non_person_contributors_and_export\n",
-    "from src.clean_names_helpers import format_name_to_lastname_initials"
+    "from src.clean_names_helpers import format_name_to_lastname_initials\n",
+    "from src.io_helpers import sample_file # sample while reading file"
    ]
   },
   {
@@ -32,7 +34,7 @@
    "outputs": [],
    "source": [
     "# Initialize values\n",
-    "NROWS = 100\n",
+    "NROWS = sys.maxint # sys.maxint for all rows\n",
     "WHITELIST = [ # names that spacy does not recognize as such\n",
     "    \"Oosterlaan, J.\",\n",
     "    \"Nollet, F.\"\n",
@@ -50,8 +52,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pairs_raw = pd.read_csv(\"data/raw/pairs_sups_phds.csv\", nrows=NROWS)\n",
-    "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype "
+    "pairs_raw = sample_file(\"data/raw/pairs_sups_phds.csv\", k=NROWS)\n",
+    "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype \n",
+    "pairs_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs_raw.head()"
    ]
   },
   {
@@ -62,9 +74,14 @@
    "source": [
     "# remove duplicates\n",
     "pairs_filtered = pairs_raw.drop_duplicates() \n",
+    "\n",
+    "# Remove rows where 'contributor' is NA\n",
+    "pairs_filtered = pairs_filtered.dropna(subset=['contributor'])\n",
+    "\n",
     "# remove contributors that aren't people\n",
     "csv_path = \"data/removed_contributors.csv\"\n",
-    "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)"
+    "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)\n",
+    "len(pairs_filtered)"
    ]
   },
   {
@@ -78,7 +95,7 @@
     "# Apply name standardization to the contributor column\n",
     "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_initials)\n",
     "\n",
-    "pairs_std.head()"
+    "len(pairs_std)"
    ]
   },
   {
@@ -87,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group by publication and aggregate contributors into a list\n",
+    "# Group by publication\n",
     "aggregated = pairs_std.groupby([\n",
     "        'integer_id', \n",
     "        'thesis_identifier', \n",
@@ -96,9 +113,12 @@
     "        'title', \n",
     "        'year', \n",
     "        'language'\n",
-    "    ]) \\\n",
-    "    .agg(list) \\\n",
-    "    .reset_index()\n",
+    "    ])\n",
+    "        \n",
+    "# Aggregate contributors into a list\n",
+    "aggregated = aggregated.agg(list)\n",
+    "\n",
+    "aggregated = aggregated.reset_index()\n",
     "    \n",
     "# make sure the contributor is a sequence from 1 to n_contributors\n",
     "aggregated['contributor_order'] = aggregated['contributor_order'].apply(lambda lst: list(range(1, len(lst) + 1)))\n"
@@ -144,7 +164,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the transformed DataFrame\n",
     "pubs.head()"
    ]
   },
@@ -154,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pubs"
+    "pubs['thesis_identifier'][2]"
    ]
   },
   {
@@ -163,15 +182,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pubs['title'][2]"
+    "# Expor a sample\n",
+    "seed = 42\n",
+    "\n",
+    "# Sample 100 random lines from the DataFrame\n",
+    "sampled_pubs = pubs.sample(n=100, random_state=seed)\n",
+    "\n",
+    "# Export the sampled DataFrame to a CSV file\n",
+    "sampled_pubs.to_csv('sampled_pubs.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
