Remove sampling the dataset during import This does not work as intended for our dataset, since sampling only makes sense after pivoting

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -9,12 +9,10 @@
     "# Import dependencies\n",
     "import pandas as pd\n",
     "import spacy # nlp library to filer out names that are not people\n",
-    "import sys\n",
     "\n",
     "# custom functions\n",
     "from src.clean_names_helpers import remove_non_person_contributors_and_export\n",
-    "from src.clean_names_helpers import format_name_to_lastname_initials\n",
-    "from src.io_helpers import sample_file # sample while reading file"
+    "from src.clean_names_helpers import format_name_to_lastname_initials"
    ]
   },
   {
@@ -34,12 +32,18 @@
    "outputs": [],
    "source": [
     "# Initialize values\n",
-    "NROWS = sys.maxint # sys.maxint for all rows\n",
-    "WHITELIST = [ # names that spacy does not recognize as such\n",
+    "NROWS = None # None for all\n",
+    "\n",
+    "# names that spacy does not recognize as such\n",
+    "# NOTE: Add the verbatim names here, not the standardized target notation \n",
+    "# This list can be fed from removed_contributors.csv that is created when running the script\n",
+    "WHITELIST = [ \n",
     "    \"Oosterlaan, J.\",\n",
     "    \"Nollet, F.\"\n",
     "    ] \n",
-    "BLACKLIST = [ # non-names that spacy does not recognize as such\n",
+    "\n",
+    "# non-people's names that don't get filtered out by spacy \n",
+    "BLACKLIST = [\n",
     "    \"Cardiology\"\n",
     "]\n",
     "\n",
@@ -52,17 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pairs_raw = sample_file(\"data/raw/pairs_sups_phds.csv\", k=NROWS)\n",
+    "# Read data\n",
+    "pairs_raw = pd.read_csv(\"data/raw/pairs_sups_phds.csv\", nrows=NROWS)\n",
     "pairs_raw = pairs_raw.convert_dtypes() # make sure all integer columns are integer dtype \n",
-    "pairs_raw.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pairs_raw.head()"
    ]
   },
@@ -130,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pivor the dataset, to get to one row per dissertation, with the contributors in columns\n",
     "\n",
     "# Initialize a list to hold publication data dictionaries\n",
     "pubs_list = []\n",
@@ -155,15 +152,8 @@
     "pubs = pd.DataFrame(pubs_list)\n",
     "\n",
     "# Ensure correct data types and fill missing values with a suitable placeholder if necessary\n",
-    "pubs = pubs.convert_dtypes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pubs = pubs.convert_dtypes()\n",
+    "\n",
     "pubs.head()"
    ]
   },
@@ -173,17 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pubs['thesis_identifier'][2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expor a sample\n",
-    "seed = 42\n",
+    "# Export a sample of the dataset to easily share it\n",
+    "seed = 42 # fixed seed\n",
     "\n",
     "# Sample 100 random lines from the DataFrame\n",
     "sampled_pubs = pubs.sample(n=100, random_state=seed)\n",
