--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -170,7 +170,7 @@
     "sampled_pubs = pubs.sample(n=100, random_state=seed)\n",
     "\n",
     "# Export the sampled DataFrame to a CSV file\n",
-    "sampled_pubs.to_csv('sampled_pubs.csv', index=False)"
+    "sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)"
    ]
   }
  ],
