Migrate to dependency management with conda

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Initialize values\n",
-    "NROWS = None # None for all\n",
+    "NROWS = 1000 # None for all\n",
     "\n",
     "# names that spacy does not recognize as such\n",
     "# NOTE: Add the verbatim names here, not the standardized target notation \n",
