Remove spacy model from requirements and install it programatically if it's not yet installed

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -21,8 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the multilingual NER model\n",
-    "nlp = spacy.load(\"xx_ent_wiki_sm\")"
+    "# Load, and if notvailable, download the spacy nlp model \n",
+    "model_name = \"xx_ent_wiki_sm\" # multilingual NER model\n",
+    "nlp = ensure_spacy_model(model_name)"
    ]
   },
   {
