Clean up and clearer naming

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -12,7 +12,8 @@
     "\n",
     "# custom functions\n",
     "from src.clean_names_helpers import remove_non_person_contributors_and_export\n",
-    "from src.clean_names_helpers import format_name_to_lastname_initials"
+    "from src.clean_names_helpers import format_name_to_lastname_initials\n",
+    "from src.clean_names_helpers import ensure_and_load_spacy_model"
    ]
   },
   {
@@ -23,7 +24,7 @@
    "source": [
     "# Load, and if notvailable, download the spacy nlp model \n",
     "model_name = \"xx_ent_wiki_sm\" # multilingual NER model\n",
-    "nlp = ensure_spacy_model(model_name)"
+    "nlp = ensure_and_load_spacy_model(model_name)"
    ]
   },
   {
@@ -33,7 +34,7 @@
    "outputs": [],
    "source": [
     "# Initialize values\n",
-    "NROWS = 1000 # None for all\n",
+    "NROWS = None # None for all\n",
     "\n",
     "# names that spacy does not recognize as such\n",
     "# NOTE: Add the verbatim names here, not the standardized target notation \n",
@@ -43,7 +44,7 @@
     "    \"Nollet, F.\"\n",
     "    ] \n",
     "\n",
-    "# non-people's names that don't get filtered out by spacy \n",
+    "# non-people's names that don't get filtered out by spaCy \n",
     "BLACKLIST = [\n",
     "    \"Cardiology\"\n",
     "]\n",
@@ -78,7 +79,8 @@
     "# remove contributors that aren't people\n",
     "csv_path = \"data/removed_contributors.csv\"\n",
     "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)\n",
-    "len(pairs_filtered)"
+    "\n",
+    "print(f\"{len(pairs_filtered)} columns are left.\")"
    ]
   },
   {
