Remove spacy import and fix typo

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "# Import dependencies\n",
     "import pandas as pd\n",
-    "import spacy # nlp library to filer out names that are not people\n",
     "\n",
     "# custom functions\n",
     "from src.clean_names_helpers import remove_non_person_contributors_and_export\n",
@@ -92,9 +91,7 @@
     "# Standardize names\n",
     "pairs_std = pairs_filtered\n",
     "# Apply name standardization to the contributor column\n",
-    "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_initials)\n",
-    "\n",
-    "len(pairs_std)"
+    "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_initials)"
    ]
   },
   {
@@ -129,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pivor the dataset, to get to one row per dissertation, with the contributors in columns\n",
+    "# Pivot the dataset, to get to one row per dissertation, with the contributors in columns\n",
     "\n",
     "# Initialize a list to hold publication data dictionaries\n",
     "pubs_list = []\n",
