Add scopus API key

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -172,6 +172,19 @@
     "# Export the sampled DataFrame to a CSV file\n",
     "sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the file into a DataFrame\n",
+    "df = pd.read_csv('scopus_api_key.csv')\n",
+    "\n",
+    "# Extract API key\n",
+    "api_key = df.iloc[0, 1]"
+   ]
   }
  ],
  "metadata": {
