Implement basic Scopus API calls and untested publication matching

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PhD and Supervisor data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean and restructure dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,7 +47,7 @@
    "outputs": [],
    "source": [
     "# Initialize values\n",
-    "NROWS = None # None for all\n",
+    "NROWS = 100 # None for all\n",
     "\n",
     "# names that spacy does not recognize as such\n",
     "# NOTE: Add the verbatim names here, not the standardized target notation \n",
@@ -174,16 +188,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Call Scopus API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the file into a DataFrame\n",
-    "df = pd.read_csv('scopus_api_key.csv')\n",
+    "# Import dependencies\n",
+    "from src.api_helpers import find_publications\n",
+    "from src.api_helpers import find_first_publication\n",
+    "from src.api_helpers import common_pub_author_and_contributor_1_row\n",
     "\n",
-    "# Extract API key\n",
-    "api_key = df.iloc[0, 1]"
+    "# to find the configuration file, run\n",
+    "# import pybliometrics\n",
+    "# pybliometrics.scopus.utils.constants.CONFIG_FILE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example call\n",
+    "author_last_name = \"van Neerven\"\n",
+    "author_initials = \"J\"\n",
+    "publications = find_publications(author_last_name, author_initials)\n",
+    "\n",
+    "print(\"Publications:\", publications)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test if I have the connection, in case my authentication does not work\n",
+    "from pybliometrics import ScopusSearch\n",
+    "s = ScopusSearch('ISSN(1532-849X) AND PUBYEAR IS 2010',subscriber=False)\n",
+    "print(s.results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# go through all publications\n",
+    "# use * to unpack the return value of split into two arguments\n",
+    "pubs['contr1_publication'] = pubs['contributor_1'].apply(lambda x: find_first_publication(*x.split(', ')) if pd.notnull(x) else None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Look up both author_name and contributor_1 and find the first common publication, if there is any\n",
+    "pubs['common_publication'] = pubs.apply(common_pub_author_and_contributor_1_row, axis=1)"
    ]
   }
  ],
