Comment out sampling of cleaned dataset

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -181,10 +181,10 @@
     "seed = 42 # fixed seed\n",
     "\n",
     "# Sample 100 random lines from the DataFrame\n",
-    "sampled_pubs = pubs.sample(n=100, random_state=seed)\n",
+    "#sampled_pubs = pubs.sample(n=50, random_state=seed)\n",
     "\n",
     "# Export the sampled DataFrame to a CSV file\n",
-    "sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)"
+    "#sampled_pubs.to_csv('data/cleaned/sampled_pubs.csv', index=False)"
    ]
   },
   {
@@ -255,6 +255,18 @@
    "source": [
     "# Look up both author_name and contributor_1 and find the first common publication, if there is any\n",
     "pubs['common_publication'] = pubs.apply(common_pub_author_and_contributor_1_row, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So far, so good. The next step would be to get the first author each that the API returns and sees if they both share a publication. If that's not the case, the code should move to the next match for author_name, then contributor_1 and so on. The added layer of iteration is somewhat looking for plausible matches, namely matches that share a publication. We might still have a lot of false positives, this way though.\n",
+    "\n",
+    "Another layer we can build in is to verify the affilliation of the authors (that is in the matching publication). We can then whitelist papers where the PhD name is listed under the correct affiliation on that paper. As a stand-in we can also only count contributor_1 that had the same affiliation. To be determined if this works.\n",
+    "\n",
+    "We can also get some diagnostics on how many name matches we got per name in the dataframe. This should give us some idea on how many API calls we need to do and how certain we are with the name matching. \n",
+    "We should also check how much of TiU's call budget we would us up to go throught the entire list. "
    ]
   }
  ],
