Fix import of pybliometrics.scopus

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -230,8 +230,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Test if I have the connection, in case my authentication does not work\n",
-    "from pybliometrics import ScopusSearch\n",
+    "from pybliometrics.scopus import ScopusSearch\n",
     "s = ScopusSearch('ISSN(1532-849X) AND PUBYEAR IS 2010',subscriber=False)\n",
     "print(s.results)"
    ]
@@ -268,6 +269,13 @@
     "We can also get some diagnostics on how many name matches we got per name in the dataframe. This should give us some idea on how many API calls we need to do and how certain we are with the name matching. \n",
     "We should also check how much of TiU's call budget we would us up to go throught the entire list. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
