Latest version before realizing that scopus is not a valid option Quite a messy commit unfortunatelty, but at least it should run trhough. There are some general utils functions be useful for open alex, too.

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -168,7 +168,7 @@
     "# Ensure correct data types and fill missing values with a suitable placeholder if necessary\n",
     "pubs = pubs.convert_dtypes()\n",
     "\n",
-    "pubs.head()"
+    "len(pubs)"
    ]
   },
   {
@@ -200,10 +200,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import dependencies\n",
+    "import src.api_helpers as api_helpers\n",
+    "\n",
     "from src.api_helpers import find_publications\n",
     "from src.api_helpers import find_first_publication\n",
     "from src.api_helpers import common_pub_author_and_contributor_1_row\n",
+    "\n",
+    "import importlib\n",
+    "importlib.reload(api_helpers)\n",
     "\n",
     "# to find the configuration file, run\n",
     "# import pybliometrics\n",
@@ -216,21 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# example call\n",
-    "author_last_name = \"van Neerven\"\n",
-    "author_initials = \"J\"\n",
-    "publications = find_publications(author_last_name, author_initials)\n",
-    "\n",
-    "print(\"Publications:\", publications)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "# Test if I have the connection, in case my authentication does not work\n",
     "from pybliometrics.scopus import ScopusSearch\n",
     "s = ScopusSearch('ISSN(1532-849X) AND PUBYEAR IS 2010',subscriber=False)\n",
@@ -243,9 +232,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# go through all publications\n",
-    "# use * to unpack the return value of split into two arguments\n",
-    "pubs['contr1_publication'] = pubs['contributor_1'].apply(lambda x: find_first_publication(*x.split(', ')) if pd.notnull(x) else None)"
+    "# look up publications of one contributor\n",
+    "author_last_name = \"van Neerven\"\n",
+    "author_initials = \"J\"\n",
+    "publications = find_publications(author_last_name, author_initials)\n",
+    "\n",
+    "publications.head()"
    ]
   },
   {
@@ -254,8 +246,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Look up both author_name and contributor_1 and find the first common publication, if there is any\n",
-    "pubs['common_publication'] = pubs.apply(common_pub_author_and_contributor_1_row, axis=1)"
+    "pubs_sample = pubs.head(1)\n",
+    "pubs_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# go through a test set of the publications\n",
+    "\n",
+    "#common_pub_author_and_contributor_1_row(pubs_sample)\n",
+    "\n",
+    "author = pubs_sample['author_name'].iloc[0]\n",
+    "contributor = pubs_sample['contributor_1'].iloc[0]\n",
+    "\n",
+    "publications_author = find_publications(*author.split(', ')) if author is not None else []\n",
+    "publications_contributor = find_publications(*contributor.split(', ')) if contributor is not None else []\n",
+    "\n",
+    "# # Look up both author_name and contributor_1 and find the first common publication, if there is any\n",
+    "# pubs_sample['common_publication'] = pubs_sample.apply(common_pub_author_and_contributor_1_row, axis=1)\n",
+    "# pubs_sample\n",
+    "\n",
+    "contributor"
    ]
   },
   {
@@ -267,7 +282,9 @@
     "Another layer we can build in is to verify the affilliation of the authors (that is in the matching publication). We can then whitelist papers where the PhD name is listed under the correct affiliation on that paper. As a stand-in we can also only count contributor_1 that had the same affiliation. To be determined if this works.\n",
     "\n",
     "We can also get some diagnostics on how many name matches we got per name in the dataframe. This should give us some idea on how many API calls we need to do and how certain we are with the name matching. \n",
-    "We should also check how much of TiU's call budget we would us up to go throught the entire list. "
+    "We should also check how much of TiU's call budget we would us up to go throught the entire list. \n",
+    "\n",
+    "There seems to be an affiliation ID"
    ]
   },
   {
