--- a/subset_biomed_institutions.ipynb
+++ b/subset_biomed_institutions.ipynb
@@ -1,34 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Subset dataset to publications from Medical institutions only \n",
+    "\n",
+    "## Load dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from datetime import datetime, timedelta"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\20211831\\AppData\\Local\\Temp\\ipykernel_13188\\887412386.py:1: DtypeWarning: Columns (16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"data/cleaned/pubs.csv\")\n"
-     ]
-    }
-   ],
    "source": [
-    "df = pd.read_csv(\"data/cleaned/pubs.csv\")"
+    "## Settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# limit the number of rows that are shown with printing dataframes\n",
+    "pd.set_option('display.max_rows', 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pubs = pd.read_csv(\"data/cleaned/pubs.csv\")\n",
+    "\n",
+    "pubs"
    ]
   },
   {
@@ -40,43 +57,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "biomedical = ['amcpub', 'lumc', 'vumc', 'umcu'] \n",
-    "subset = df[df['institution'].isin(biomedical)]\n",
-    "subset = subset.reset_index(drop=True)"
+    "pubs_biomed = pubs[pubs['institution'].isin(biomedical)].reset_index(drop=True)\n",
+    "\n",
+    "pubs_biomed"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datetime format for `year`"
+    "### Filter out recent publications\n",
+    "\n",
+    "We don't want to go too far back in time, where reporting might be too spotty to have reliable data. So we only go back 5 years from the reporting date and filter the dataset by that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\20211831\\AppData\\Local\\Temp\\ipykernel_13188\\2122438702.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '2016-01-01 00:00:00' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  subset.at[index, 'year'] = datetime.strptime(str(value), '%Y')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# datetime change, run once\n",
-    "for index, value in enumerate(subset['year']):\n",
-    "    subset.at[index, 'year'] = datetime.strptime(str(value), '%Y')\n",
-    "date_5_years_ago = datetime.now() - timedelta(days=5*365)\n",
-    "new_df = subset[subset['year'] >= date_5_years_ago]\n",
-    "new_df = new_df.reset_index(drop=True)"
+    "# define reporting date. We include publications that are at least 5 years old from this date.\n",
+    "\n",
+    "# checked if using June, July or August 1st makes a difference and it does not. \n",
+    "# We get still include the same amount of publications <3\n",
+    "date_str = \"01-07-2024\"\n",
+    "reporting_date = datetime.strptime(date_str, \"%d-%m-%Y\")\n",
+    "\n",
+    "# convert `year` column to datetime so we can use datetime operations on it\n",
+    "pubs_biomed['year'] = pd.to_datetime(pubs_biomed['year'], format='%Y')\n",
+    "    \n",
+    "date_5_years_ago = reporting_date - timedelta(days=5*365)\n",
+    "pubs_recent = pubs_biomed[pubs_biomed['year'] >= date_5_years_ago].reset_index(drop=True)\n",
+    "\n",
+    "pubs_recent"
    ]
   },
   {
@@ -87,63 +106,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for column in new_df.columns:\n",
-    "    for index, value in new_df[column].items():\n",
-    "        if str(value).startswith(','):\n",
-    "            new_df.at[index, column] = np.nan\n",
-    "        if str(value).startswith('Surgery'):             # from manual check \n",
-    "            new_df.at[index, column] = np.nan"
+    "Replace values that start with illegal strings with `nan` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nan_rows = new_df.iloc[:, 7:17].isnull().all(axis=1)\n",
-    "new_df = new_df[~nan_rows]\n",
-    "new_df.reset_index(drop=True, inplace=True)\n"
+    "illegal_startswith = [',', 'Surgery'] # unclear why we should remove Surgery. But keep it in the early August release\n",
+    "\n",
+    "def illegal_startswith2nan(value):\n",
+    "    value_str = str(value)\n",
+    "    if any(value_str.startswith(word) for word in illegal_startswith):\n",
+    "        return np.nan\n",
+    "    return value\n",
+    "\n",
+    "pubs_wo_illegal_startswith = pubs_recent.map(illegal_startswith2nan)\n",
+    "\n",
+    "pubs_wo_illegal_startswith"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "integer_id                                                       77423\n",
-      "thesis_identifier      https://dspace.library.uu.nl/handle/1874/416508\n",
-      "institution                                                       umcu\n",
-      "author_name                                       Hol, Janna Aldegonda\n",
-      "title                Renal tumors in children and the role of (epi)...\n",
-      "year                                               2022-01-01 00:00:00\n",
-      "language                                                            en\n",
-      "contributor_1                                                      NaN\n",
-      "contributor_2                                             Jongmans, M.\n",
-      "contributor_3                                                      NaN\n",
-      "contributor_4                                                      NaN\n",
-      "contributor_5                                                      NaN\n",
-      "contributor_6                                                      NaN\n",
-      "contributor_7                                                      NaN\n",
-      "contributor_8                                                      NaN\n",
-      "contributor_9                                                      NaN\n",
-      "contributor_10                                                     NaN\n",
-      "Name: 1404, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for index, row in new_df.iterrows():\n",
-    "    for i in range(1, 10):\n",
+    "# identify rows where ALL contributor rows are nan\n",
+    "contributor_nan_rows = pubs_wo_illegal_startswith.filter(like='contributor').isnull().all(axis=1)\n",
+    "\n",
+    "# ... and remove them\n",
+    "pups_has_contrib = pubs_wo_illegal_startswith[~contributor_nan_rows].reset_index(drop=True)\n",
+    "\n",
+    "pups_has_contrib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure every publication has a continious list of contributors without nan gaps. To do this, promote contributors that have a `NaN` contributor higher to them, so that there are no `NaN` contributors higher than non-`NaN` contributors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pups_continious_contrib = pups_has_contrib\n",
+    "\n",
+    "contributor_columns = [col for col in pups_continious_contrib.columns if col.startswith('contributor_')]\n",
+    "\n",
+    "for index, row in pups_continious_contrib.iterrows():\n",
+    "    for i in range(1, len(contributor_columns)-1):\n",
     "        current_col = 'contributor_' + str(i)\n",
     "        next_col = 'contributor_' + str(i + 1)\n",
     "        \n",
@@ -151,29 +172,32 @@
     "        if pd.isna(row[current_col]) and not pd.isna(row[next_col]):\n",
     "            print(row)\n",
     "            # Replace current column with next column and set next column to NaN\n",
-    "            new_df.at[index, current_col] = row[next_col]\n",
-    "            new_df.at[index, next_col] = np.nan"
+    "            pups_continious_contrib.at[index, current_col] = row[next_col]\n",
+    "            pups_continious_contrib.at[index, next_col] = np.nan\n",
+    "            \n",
+    "            \n",
+    "pups_continious_contrib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop NaN rows and duplicates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = new_df\n",
-    "df = df.dropna(subset=['author_name', 'title', 'contributor_1'])\n",
-    "df.reset_index(drop=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop_duplicates(subset=['author_name'], keep='last')\n",
-    "df.reset_index(drop=True, inplace=True)"
+    "pups_cleaned = pups_continious_contrib\n",
+    "pups_cleaned = pups_cleaned.dropna(subset=['author_name', 'title', 'contributor_1'])\n",
+    "\n",
+    "pups_cleaned = pups_cleaned.drop_duplicates(subset=['author_name'], keep='last').reset_index(drop = True)\n",
+    "\n",
+    "pups_cleaned"
    ]
   },
   {
@@ -185,31 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('biomedical_data.csv', index=False)"
+    "pups_cleaned.to_csv('data/cleaned/biomedical_pubs.csv', index=False)"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "env-cleaned-data",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "name": "python"
   }
  },
  "nbformat": 4,
